<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Mappic</string>
    <string name="action_settings" tools:ignore="MissingTranslation">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next" tools:ignore="MissingTranslation">Next</string>
    <string name="previous" tools:ignore="MissingTranslation">Previous</string>
    <string name="notused" tools:ignore="MissingTranslation">to be removed</string>

    <!-- Poniżej moje nazwy akcji -->
    <string name="map_list">Map list</string>
    <string name="step1" tools:ignore="TypographyFractions">Step 1/4</string>
    <string name="step2">Step 2/4</string>
    <string name="step3" tools:ignore="TypographyFractions">Step 3/4</string>
    <string name="step4">Step 4/4</string>
    <string name="step0_imgMethod">Take picture of map or choose one from your gallery</string>
    <string name="step1_photo">Take a photo of a map or a plan</string>
    <string name="step1ok_isok">Is this photo OK?</string>
    <string name="step2_mark1st">Mark 1st point on a plan</string>
    <string name="step3_mark2nd">Mark 2nd point on a plan</string>
    <string name="step4_name_map">Name map</string>
    <string name="ok_there" tools:ignore="Typos">Ok, I\'m there!</string><!-- zaznacza, że Ok powinno być OK, ale jest w zdaniu, dlatego wyłączone pokazywanie błędów -->
    <string name="ok">OK</string>
    <!--<string name="title_activity_add_map">AddMapActivity</string>-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" tools:ignore="MissingTranslation">Hello blank fragment</string>
    <string name="photo_success">Photo saved</string>
    <string name="options">Options</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="addmap">Add map</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="back_arrow_descr">Back to map list</string>
    <string name="map_options_descr">Map options</string>
    <string name="new_photo">New photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="map_icon_desc">Map icon</string>
    <string name="use_my_location_butt">Use my location</string>
    <string name="latitude">Latitude (N/S)</string>
    <string name="longitude">Longitude (E/W)</string>
    <string name="step2_type_gps1">Type, or use your location as 1st point</string>
    <string name="step3_type_gps2">Type, or use your location as 2nd point</string>
    <string name="name_map">Name your map</string>
    <string name="hint_mapname">My map name</string>
    <string name="please_wait">Please wait…</string>
    <string name="saved_to_db">Map saved</string>
    <string name="dialog_message_delete">Delete map %1$s?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="map_deleted">Deleted.</string>


    <string-array name="errTypesMessages">
        <item>unknown error</item>
        <item>Mark point on map</item>
        <item>Fill Location fields</item>
        <item>Incorrect values. Correct example: 20.000 N</item>
        <item>Points 1 and 2 are too close or identical</item>
        <item>Test error message</item>
        <item>Point is marked outside image</item>
        <item>Map with this name already exists</item>
        <item>Error, can\'t get Image size. Try to edit image.</item>
    </string-array>
</resources>