<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addmap.Step4Fragment" >
    <!-- if without orientation does not work try to use both:
    android:orientation="" vertical and horizontal -->

    <!-- This layout file does not require landscape version. -->

    <TextView
        android:id="@+id/nameMapText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12sp"
        android:layout_marginTop="0dp"
        android:text="@string/name_map"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/mapNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="94dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toBottomOf="@id/nameMapText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"
        android:textSize="20sp"
        android:hint="@string/hint_mapname"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/OkFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        android:drawableLeft="@drawable/check_48px"
        android:text="@string/ok"

        app:fabCustomSize="64dp"
        app:fabSize="auto"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:useCompatPadding="true"
        tools:ignore="ContentDescription,RtlHardcoded,SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>