<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".addmap.Step3Fragment"
    android:id="@+id/constraint">

    <TextView
        android:id="@+id/markPoint2Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12sp"
        android:layout_marginTop="0dp"
        android:text="@string/step3_mark2nd"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- If you want imageView to not include empty space around image,
    set android:adjustViewBounds to true
    and set width/height (choose the smaller one) to 0dp. -->

    <LinearLayout
        android:id="@+id/linLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"

        app:layout_constraintTop_toBottomOf="@id/markPoint2Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/OkFAB"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:background="@color/black"
            android:scaleType="centerInside"
            tools:src="@drawable/map_h"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/gotoPoint2Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:text="@string/step3_type_gps2"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/gpsLatitude"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            android:inputType="text"
            android:textSize="20sp"
            android:hint="@string/latitude"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/gpsLongitude"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            android:inputType="text"
            android:textSize="20sp"
            android:hint="@string/longitude"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:text="error message here"
            android:textColor="@color/design_default_color_error"
            android:visibility="invisible"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/OkFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/check_48px"

        app:fabCustomSize="64dp"
        app:fabSize="auto"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonReadGps"
        app:useCompatPadding="true"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/buttonReadGps"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="12dp"
        android:drawableLeft="@drawable/location_on_48px"
        android:text="@string/use_my_location_butt"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/OkFAB"
        app:layout_constraintStart_toStartOf="parent"
        app:useCompatPadding="true"
        tools:ignore="RtlHardcoded,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>